Read the extra space amount that can be used to install WebApk from finch flag.

Bug: 736457
Change-Id: I3758a8445c0b55968a779f898b239709a26a6136
Reviewed-on: https://chromium-review.googlesource.com/849552
Commit-Queue: Ran Ji <ranj@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Yaron Friedman <yfriedman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527511}
Former-commit-id: 281174a8fe0a9acb417ff4d0a2897966e45e3fca