chrome/android/java/src/org/chromium/chrome/browser/metrics/WebApkUma.java
@@ -15,6 +15,7 @@ import android.text.TextUtils;
 
 import org.chromium.base.ContextUtils;
 import org.chromium.base.metrics.RecordHistogram;
+import org.chromium.chrome.browser.ChromeFeatureList;
 import org.chromium.chrome.browser.preferences.website.SiteSettingsCategory;
 import org.chromium.chrome.browser.preferences.website.Website;
 import org.chromium.chrome.browser.preferences.website.WebsitePermissionsFetcher;
@@ -80,6 +81,9 @@ public class WebApkUma {
     public static final int WEBAPK_OPEN_LAUNCH_SUCCESS = 0;
     // Obsolete: WEBAPK_OPEN_NO_LAUNCH_INTENT = 1;
     public static final int WEBAPK_OPEN_ACTIVITY_NOT_FOUND = 2;
+
+    private static final String ADJUST_WEBAPK_INSTALLATION_SPACE_PARAM =
+            "webapk_extra_installation_space_mb";
 
     /**
      * Records the time point when a request to update a WebAPK is sent to the WebAPK Server.
@@ -329,7 +333,12 @@ public class WebApkUma {
         }
         long minimumFreeBytes = getLowSpaceLimitBytes(partitionTotalBytes);
 
-        return partitionAvailableBytes - minimumFreeBytes;
+        long webApkExtraSpaceBytes = ChromeFeatureList.getFieldTrialParamByFeatureAsInt(
+                                             ChromeFeatureList.ADJUST_WEBAPK_INSTALLATION_SPACE,
+                                             ADJUST_WEBAPK_INSTALLATION_SPACE_PARAM, 0)
+                * 1024L * 1024L;
+
+        return partitionAvailableBytes - minimumFreeBytes + webApkExtraSpaceBytes;
     }
 
     /**
